2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |CDATA_SECTION_STATE| (formally |CDATA_BLOCK_STATE|
	is split into three states.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |CLOSE_TAG_OPEN_STATE| is broken into
	itself and new |CDATA_PCDATA_CLOSE_TAG_STATE| so that
	no longer does the tokenizer have to push back next input
	characters in those states.

2008-09-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |MARKUP_DECLARATION_OPEN_STATE| broken
	into four states so that no longer does the tokenizer have to push
	back next input characters in that state.

2008-09-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Methods now accept additional parameter, $get_wrapper,
	which can be used to insert some wrapper between the character
	stream handle and the tokenizer.  (It is currently not supported
	for |set_inner_html| for |Element|s).

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Ignore punctuations in charset names.

2008-09-10  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for charset-layer error levels.

	* HTML.pm.src: Don't specify |text| argument for the
	|chardecode:fallback| error, since it is not the encoding
	being used alternatively.

2008-09-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for |XSLT-compat| (HTML5 revision 2141).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm: Support for extensibility (HTML5 revision 2051).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Bug fix and sync with the spec with regard
	to after after frameset insertion mode processing (HTML5
	revision 1909).  Note that the implementation was wrong
	per the old spec before the r1909 changes.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTMLTable.pm: scope=auto algorithm fix synced with the
	spec (HTML5 revision 2093).
	($process_row): Algorithm step numbers synced with the
	spec (HTML5 revision 2092).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>
