@@ -1,7 +1,7 @@
 1..1073
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Sep 13 16:44:57 2008
-# Current time GMT:   Sat Sep 13 07:44:57 2008
+# Current time local: Sat Sep 13 17:16:02 2008
+# Current time GMT:   Sat Sep 13 08:16:02 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
