@@ -1,7 +1,7 @@
 1..3105
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Sep 13 16:45:22 2008
-# Current time GMT:   Sat Sep 13 07:45:22 2008
+# Current time local: Sat Sep 13 17:16:20 2008
+# Current time GMT:   Sat Sep 13 08:16:20 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
