@@ -1,5 +1,10 @@
 2008-09-13  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: Make |PUBLIC| and |SYSTEM| keyword tokenizing
+	into their own tokenizer states.
+
+2008-09-13  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: |CDATA_SECTION_STATE| (formally |CDATA_BLOCK_STATE|
 	is split into three states.
 
